--- a/src/components/Navigation/Drawer/Drawer.module.scss
+++ b/src/components/Navigation/Drawer/Drawer.module.scss
@@ -28,13 +28,13 @@
                 &:hover  {
                     opacity: .7;                    
                 }
-                // .active {
-                //     &
-                    
-                // }
+                
                 
             }
         }
+    }
+    .active{
+        opacity: .3;
     }
 }
 
